# brlcad_quickiterate

./: .gitignore  DESIGN_SCENE_OBJ.md  EDIT_WIDGET_API_PROPOSAL.md  MGED_TODO.md  Obol_qged.md  PLAN.md  PROGRESS.md  RADICAL_MIGRATION.md  README.md  SKETCH_WIDGET_FEATURE_COMPARISON.md  WORKING.md  benchmark_docs.sh  benchmark_results.md  mged_compare.sh  mged_edit_test.sh  mgedrework.diff  ps  search.nged  unity_errors.txt
.github/: copilot-instructions.md
.github/workflows/: check.yml  rebuild-bext.yml
GeometricTools/: .gitignore  CMakeLists.txt  GOALS.md  GTE_MESH_PROCESSING_README.md  Makefile  README.md  README_DEVELOPMENT.md  UNIMPLEMENTED.md  compare_with_geogram  r768_1000.xyz  r768_5k.xyz  test_geogram_comparison  test_mesh_quality  test_remesh_verdict
GeometricTools/GTE/Mathematics/: BoundaryPolygonRTree.h  CVT6D.h  CVTN.h  IntegrationSimplex.h  LSCMParameterization.h  MeshHoleFilling.h  MeshQuality.h  MeshRemesh.h  MeshRepair.h  Polygon2Validation.h  RestrictedVoronoiDiagram.h  SurfaceRVDN.h
GeometricTools/docs/: ASSESSMENT_SUMMARY.md  BRLCAD_GEOGRAM_USAGE.md  BRLCAD_MESH_RECOMMENDATIONS.md  BRLCAD_MIGRATION_GUIDE.md  CO3NE_BRLCAD_SOLUTION.md  COMPLETE_JOURNEY.md  COMPLETE_OPTIMIZATION_SUMMARY.md  COMPONENT_MERGING_ASSESSMENT.md  INCREMENTAL_UPDATES_REPORT.md  MANIFOLD_CLOSURE_SUMMARY.md  OPTIMIZATION_JOURNEY_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_README.md  PERFORMANCE_REPORT.md  PERFORMANCE_SUMMARY.md  PERFORMANCE_VISUAL.md  PROFILING_EXECUTIVE_SUMMARY.md  PROFILING_RESULTS.md  PROFILING_VISUAL_SUMMARY.md  PROGRESSIVE_COMPONENT_MERGING.md  SPATIAL_INDEXING_REPORT.md  UNION_FIND_IMPLEMENTATION_REPORT.md  VISUAL_EXPLANATION.md
GeometricTools/tests/: README.md  README_ANISOTROPIC_TEST.md  check_projection.cpp  compare_with_geogram.cpp  demo_rvd_cvt.cpp  example_convexhull_brlcad.cpp  stress_test.cpp  test_anisotropic_end_to_end.cpp  test_anisotropic_remesh.cpp  test_bot_repair_comparison.cpp  test_cvt6d.cpp  test_cvt_n.cpp  test_delaunay6.cpp  test_delaunay_n.cpp  test_delaunay_nn.cpp  test_full_algorithms.cpp  test_geogram_comparison.cpp  test_gtevtk_compare.cpp  test_mesh_quality.cpp  test_mesh_repair.cpp  test_newton_optimizer.cpp  test_no_repair.cpp  test_parallel_rvd.cpp  test_remesh.cpp  test_remesh_comparison.cpp  test_remesh_verdict.cpp  test_repair_remesh_quality.cpp  test_rvd.cpp  test_rvd_n.cpp  test_rvd_performance.cpp  test_threadpool.cpp  test_with_validation.cpp
GeometricTools/tests/data/: stress_results.txt  stress_test_results.txt
GeometricTools/tests/scripts/: create_extreme_self_intersect.py  create_self_intersecting_test.py  (+5 more)
asciiquack/: CMakeLists.txt  README.md  TODO.md  aqregex.hpp  asciiquack.cpp  docbook5.hpp  document.hpp  html5.hpp  manpage.hpp  minipdf.cpp  minipdf.hpp  parser.cpp  pdf.hpp  substitutors.hpp  test_asciiquack.cpp
asciiquack/benchmark/: bench_asciiquack.cpp
asciiquack/benchmark/sample-data/: inline_heavy.adoc
asciiquack/examples/: check_pdf_layout.py  demo.adoc  stress_test.adoc
brlcad/: .gitignore  CMakeLists.txt  DBI_OLD_ANALYSIS.md  DBI_TODO.md  EDIT_WIDGET_API_PROPOSAL.md  MISSING_EDIT_FEATURES.md  QGED_ANALYSIS.md
brlcad/doc/: CMakeLists.txt  DBI_MIGRATION.md  TODO.BSG-modernization.md  TODO.qged-stack.md
brlcad/include/: CMakeLists.txt  bn.h  bsg.h  bu.h  bv.h  dm.h  ged.h  nmg.h  raytrace.h  render.h  render_ipc.h
brlcad/misc/: mime_cad.types
brlcad/regress/: CMakeLists.txt
brlcad/src/: README  source_dirs.cmake
brlcad/src/libbv/: CMakeLists.txt  bv_private.h  bv_stub.c  hash.c  lod.cpp  polygon.c  render_ctx.cpp  scene.cpp  scene_graph.cpp  util.cpp  view_sets.cpp  vlist.c
brlcad/src/libbv/tests/: CMakeLists.txt  render_test.c  scene.c  vlist.c
brlcad/src/libgcv/plugins/fcstd/: CMakeLists.txt  fcstd_read.cpp
brlcad/src/libqtcad/tests/: CMakeLists.txt  qgmodel.cpp  qgview.cpp  qsketch.cpp
brlcad/src/librender/: CMakeLists.txt  render_ctx.cpp  render_ipc_client.c  render_ipc_client.cpp  render_opts.c  render_opts.cpp  render_private.h  render_run.cpp
brlcad/src/librender/tests/: CMakeLists.txt  test_render_run.cpp
brlcad/src/libtclcad/: CMakeLists.txt  commands.c  dm.c  fb.c  fbserv.c  init.c  mouse.c  obol_view.cpp  obol_view_macos.mm  polygons.c  tclcad_private.h  tkImgFmtPIX.c  wrapper.c
brlcad/src/libtclcad/view/: arrows.c  autoview.c  axes.c  draw.c  faceplate.c  labels.c  lines.c  refresh.c  util.c  view.h
brlcad/src/qged/: CMakeLists.txt  QgEdApp.cpp  QgEdApp.h  QgEdFilter.h  QgEdMainWindow.cpp  QgEdMainWindow.h  QgEdPalette.cpp  QgEdPalette.h  QgObolView.h  fbserv.cpp  fbserv.h  main.cpp  qged_pipeline_runner.h  qged_pipeline_test.cpp  qged_test.cpp  qged_test_runner.h
brlcad/src/qged/plugins/: plugin.h
brlcad/src/qged/plugins/edit/: CMakeLists.txt
brlcad/src/qged/plugins/edit/ell/: QEll.cpp  QEll.h  ell_tool.cpp
brlcad/src/qged/plugins/edit/prim_desc/: CMakeLists.txt  QgPrimDescWidget.cpp  QgPrimDescWidget.h  icon.qrc  prim_desc_tool.cpp
brlcad/src/qged/plugins/polygon/: QPolyCreate.cpp  QPolyCreate.h  QPolyMod.cpp  QPolyMod.h  QPolySettings.cpp  QPolySettings.h  polygon_tool.cpp
brlcad/src/qged/plugins/view/info/: CADViewModel.cpp  CADViewModel.h  view_info.cpp
brlcad/src/qged/plugins/view/measure/: CADViewMeasure.cpp  CADViewMeasure.h  measure.cpp
brlcad/src/qged/plugins/view/select/: CADViewSelector.cpp  CADViewSelector.h  select.cpp
brlcad/src/qged/plugins/view/settings/: CADViewSettings.cpp  CADViewSettings.h  view_settings.cpp
brlcad/src/rt_ipc/: CMakeLists.txt  rt_ipc.c  rt_ipc.cpp
brlcad/src/rt_ipc/tests/: CMakeLists.txt  test_rt_ipc_proto.cpp
brlcad_bview/: MIGRATION.md
mged_screenshots/: README.md  gallery.html
mged_screenshots/param_edits/: gallery.html
mged_screenshots/sys/: gallery.html
obol/: CMakeLists.txt
obol/cmake/: FindOSMesa.cmake  obol-config.cmake.in
obol/src/: CMakeLists.txt
old_docs/: MISSING_EDIT_FEATURES_old.md
open2open/testfcstd/: csg_box_minus_cylinder.FCStd
openmesh/CI/: Windows.bat
pattern_screenshots/: gallery.html
qsketch_images/: README.md
test_comparisons/: gallery.html
(+1955 files in other folders)
